--- a/template_html/login_v3.html
+++ b/template_html/login_v3.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
-	<title>Color Admin | Login v3</title>
+	<title>ControlActividadesEscolares</title>
 	<meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport" />
 	<meta content="" name="description" />
 	<meta content="" name="author" />
@@ -28,9 +28,9 @@
 			<div class="news-feed">
 				<div class="news-image" style="background-image: url(../assets/img/login-bg/login-bg-11.jpg)"></div>
 				<div class="news-caption">
-					<h4 class="caption-title"><b>Color</b> Admin App</h4>
+					<h4 class="caption-title"><b>Control de Actividades Escolares</b> App</h4>
 					<p>
-						Download the Color Admin app for iPhone®, iPad®, and Android™. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+						La aplicación que acerca el acudiente al entorno escolar y a revisar el cumplimiento de las actividades escolares.
 					</p>
 				</div>
 			</div>
@@ -45,9 +45,9 @@
 							<span class="logo"></span>
 							
 							
-							<b>Color</b> Admin
+							<h4>Control de Actividades Escolares</h4>
 						</div>
-						<small>Bootstrap 5 Responsive Admin Template</small>
+						<!--<small>Bootstrap 5 Responsive Admin Template</small>-->
 					</div>
 					<div class="icon">
 						<i class="fa fa-sign-in-alt"></i>
@@ -59,25 +59,25 @@
 				<div class="login-content">
 					<form action="index.html" method="GET" class="fs-13px">
 						<div class="form-floating mb-15px">
-							<input type="text" class="form-control h-45px fs-13px" placeholder="Email Address" id="emailAddress" />
-							<label for="emailAddress" class="d-flex align-items-center fs-13px text-gray-600">Email Address</label>
+							<input type="text" class="form-control h-45px fs-13px" placeholder="usuario" id="usuario" />
+							<label for="usuario" class="d-flex align-items-center fs-13px text-gray-600">Usuario</label>
 						</div>
 						<div class="form-floating mb-15px">
-							<input type="password" class="form-control h-45px fs-13px" placeholder="Password" id="password" />
-							<label for="password" class="d-flex align-items-center fs-13px text-gray-600">Password</label>
+							<input type="password" class="form-control h-45px fs-13px" placeholder="Contraseña" id="password" />
+							<label for="password" class="d-flex align-items-center fs-13px text-gray-600">Contraseña</label>
 						</div>
 						<div class="form-check mb-30px">
 							<input class="form-check-input" type="checkbox" value="1" id="rememberMe" />
 							<label class="form-check-label" for="rememberMe">
-								Remember Me
+								Recordar
 							</label>
 						</div>
 						<div class="mb-15px">
-							<button type="submit" class="btn btn-success d-block h-45px w-100 btn-lg fs-14px">Sign me in</button>
+							<button type="submit" class="btn btn-success d-block h-45px w-100 btn-lg fs-14px">Entrar</button>
 						</div>
-						<div class="mb-40px pb-40px text-inverse">
+						<!--<div class="mb-40px pb-40px text-inverse">
 							Not a member yet? Click <a href="register_v3.html" class="text-primary">here</a> to register.
-						</div>
+						</div>-->
 						<hr class="bg-gray-600 opacity-2" />
 						<div class="text-gray-600 text-center text-gray-500-darker mb-0">
 							&copy; Color Admin All Right Reserved 2021
