--- a/template_html/administrador.html
+++ b/template_html/administrador.html
@@ -104,6 +104,12 @@
 								<a href="login_v3.html" class="menu-link">
 									<div class="menu-text">Login</div>
 								</a>
+								<div class="menu-item has-sub">
+									<a href="calendar.html" class="menu-link">
+										<div class="menu-text">Calendario</div>
+									</a>
+									
+								</div>
 								
 							</div>
 						</div>
@@ -195,7 +201,26 @@
 				</div>
 			</div>
 			<!-- END panel -->
+
+			<!-- BEGIN panel -->
+			<div class="panel panel-inverse" data-sortable-id="index-10">
+				<div class="panel-heading">
+					<h4 class="panel-title">Calendar</h4>
+					<div class="panel-heading-btn">
+						<a href="javascript:;" class="btn btn-xs btn-icon btn-default" data-toggle="panel-expand"><i class="fa fa-expand"></i></a>
+						<a href="javascript:;" class="btn btn-xs btn-icon btn-success" data-toggle="panel-reload"><i class="fa fa-redo"></i></a>
+						<a href="javascript:;" class="btn btn-xs btn-icon btn-warning" data-toggle="panel-collapse"><i class="fa fa-minus"></i></a>
+						<a href="javascript:;" class="btn btn-xs btn-icon btn-danger" data-toggle="panel-remove"><i class="fa fa-times"></i></a>
+					</div>
+				</div>
+				<div class="panel-body">
+					<div id="datepicker-inline" class="datepicker-full-width overflow-y-scroll position-relative"><div></div></div>
+				</div>
+			</div>
+			<!-- END panel -->
 		</div>
+
+		
 		<!-- END #content -->
 		
 		<!-- BEGIN scroll to top btn -->
