--- a/template_html/login_v3.html
+++ b/template_html/login_v3.html
@@ -27,12 +27,12 @@
 			<!-- BEGIN news-feed -->
 			<div class="news-feed">
 				<div class="news-image" style="background-image: url(../assets/img/login-bg/pizarra2.png)"></div>
-				<!--<div class="news-caption">
-					<h4 class="caption-title"><b>Control de Actividades Escolares</b> App</h4>
+				<div class="news-caption">
+					<!--<h4 class="caption-title"><b>Control de Actividades Escolares</b> App</h4>-->
 					<p>
 						La aplicación que acerca el acudiente al entorno escolar y a revisar el cumplimiento de las actividades escolares.
 					</p>
-				</div>-->
+				</div>
 			</div>
 			<!-- END news-feed -->
 			
@@ -43,10 +43,7 @@
 					
 					<div class="brand">
 						<div class="d-flex align-items-center">
-							<span class="logo"></span>
-							<i class="fa fa-image"></i>
-							<span img src="../assets/img/user/admin.png" alt=""></span>
-													
+							<img src="../assets/img/logo/logoControl.jpg" alt="" width="64px" height="64px">
 							<h4>Control de Actividades Escolares</h4>
 						</div>
 						<!--<small>Bootstrap 5 Responsive Admin Template</small>-->
